changed picture in about me section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4raCWN2N8_PzRa4GVRdqg0Md3HEq3oEdwUQ&usqp=CAU" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
